--- a/windows/teamserverwindow.ui
+++ b/windows/teamserverwindow.ui
@@ -14,212 +14,203 @@
    <string>TeamserverWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">/* GLOBAL FONT &amp; BACKGROUND */
+   <string notr="true">/* === Global Base === */
+* {
+    font-family: &quot;Fira Code&quot;, &quot;Consolas&quot;, monospace;
+    font-size: 12pt;
+    color: #c0c0c0;
+}
+
+/* === Main Window Gradient === */
+QMainWindow {
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+                                stop:0 #2a2f2a, stop:1 #303d30);
+}
+
+/* === QWidget default === */
 QWidget {
-    background-color: #0D1117;
-    color: #E6F1FF;
-    font-family: 'Fira Code', 'Consolas', 'Courier New', monospace;
-    font-size: 11pt;
+    background-color: #2b2f2b;
     border: none;
 }
 
-/* INPUT FIELDS */
-QLineEdit, QTextEdit, QPlainTextEdit, QSpinBox {
-    background-color: #161B22;
-    border: 1px solid #4C8EDA;
-    border-radius: 6px;
-    padding: 8px;
-    color: #E6F1FF;
-    font-size: 10pt;
+/* === QMenuBar === */
+QMenuBar {
+    background-color: #2b2f2b;
+    color: #c0c0c0;
+    font-size: 11pt;
+    padding: 2px;
+}
+QMenuBar::item {
+    padding: 2px 22px;
+    font-size: 11pt;
+}
+QMenuBar::item:selected {
+    background-color: #4d5e4d;
+    color: #ffffff;
 }
 
-QLineEdit:focus, QTextEdit:focus, QPlainTextEdit:focus, QSpinBox:focus {
-    border: 1px solid #58A6FF;
-    background-color: #1B2330;
+/* === QMenu === */
+QMenu {
+    background-color: #3b453b;
+    border: 1px solid #5a6d5a;
+}
+QMenu::item:selected {
+    background-color: #5a6d5a;
+    color: #ffffff;
 }
 
-/* QSPINBOX ARROWS */
-QSpinBox::up-button, QSpinBox::down-button {
-    background-color: #21262D;
-    subcontrol-origin: border;
-    border: 1px solid #4C8EDA;
-    width: 16px;
-    border-radius: 3px;
-}
-
-QSpinBox::up-button:hover, QSpinBox::down-button:hover {
-    background-color: #2C313C;
-    border-color: #58A6FF;
-}
-
-QSpinBox::up-arrow, QSpinBox::down-arrow {
-    image: none;
-    width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-}
-
-QSpinBox::up-arrow {
-    border-bottom: 6px solid #E6F1FF;
-    margin: 2px;
-}
-
-QSpinBox::down-arrow {
-    border-top: 6px solid #E6F1FF;
-    margin: 2px;
-}
-
-/* BUTTONS */
+/* === QPushButton === */
 QPushButton {
-    background-color: #21262D;
-    color: #E6F1FF;
-    border: 1px solid #4C8EDA;
-    border-radius: 6px;
+    background-color: #3b453b;
+    border: 1px solid #5a6d5a;
+    border-radius: 5px;
     padding: 6px 12px;
 }
-
 QPushButton:hover {
-    background-color: #2C313C;
-    border-color: #58A6FF;
+    background-color: #4d5e4d;
 }
-
 QPushButton:pressed {
-    background-color: #3B4452;
+    background-color: #2a2f2a;
+    border-color: #78a378;
+}
+QPushButton:disabled {
+    background-color: #4d5e4d;
+    color: #888;
+    border-color: #444;
 }
 
-/* TABLES */
-QTableWidget, QTableView {
-    background-color: #121826;
-    alternate-background-color: #1B2330;
-    border: 1px solid #4C8EDA;
-    color: #E6F1FF;
-    gridline-color: #30363D;
-    selection-background-color: #264F78;
-    selection-color: #FFFFFF;
-    font-size: 10.5pt;
-}
-
-QTableWidget::item, QTableView::item {
+/* === QLineEdit / QTextEdit === */
+QLineEdit, QTextEdit {
+    background-color: #3b453b;
+    border: 1px solid #5a6d5a;
+    border-radius: 4px;
     padding: 4px;
+    selection-background-color: #5a6d5a;
+    selection-color: #000;
 }
 
-QTableWidget::item:selected, QTableView::item:selected {
-    background-color: #264F78;
-    color: #FFFFFF;
+/* === QTableWidget === */
+QTableWidget {
+    background-color: #3b453b;
+    border: 1px solid #5a6d5a;
+    gridline-color: #495e49;
+    selection-background-color: #5a6d5a;
+    selection-color: #000;
 }
-
-/* HEADERS */
 QHeaderView::section {
-    background-color: #161B22;
-    color: #E6F1FF;
-    border: 1px solid #30363D;
-    padding: 6px;
-    font-size: 10pt;
-}
-
-/* LIST WIDGET */
-QListWidget {
-    background-color: #121826;
-    border: 1px solid #4C8EDA;
-    color: #E6F1FF;
-}
-
-QListWidget::item {
+    background-color: #4d5e4d;
+    color: #c0c0c0;
+    border: 1px solid #495e49;
     padding: 4px;
 }
-
-QListWidget::item:selected {
-    background-color: #264F78;
-    color: #FFFFFF;
+QTableCornerButton::section {
+    background: #4d5e4d;
+    border: 1px solid #495e49;
 }
 
-/* SCROLLBARS */
+/* === QTabWidget === */
+QTabWidget::pane {
+    border: 2px solid #5a6d5a;
+}
+QTabBar::tab {
+    background: #3a453a;
+    border: 1px solid #4d5e4d;
+    padding: 6px 14px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+QTabBar::tab:selected {
+    background: #5a6d5a;
+    color: #ffffff;
+    font-weight: bold;
+    border: 1px solid #78a378;
+}
+
+/* === QScrollBar === */
 QScrollBar:vertical, QScrollBar:horizontal {
-    background-color: #161B22;
+    background: #2a2f2a;
     border: none;
     width: 12px;
 }
-
-QScrollBar::handle:vertical, QScrollBar::handle:horizontal {
-    background-color: #4C8EDA;
-    min-height: 20px;
+QScrollBar::handle {
+    background: #5a6d5a;
     border-radius: 6px;
 }
-
 QScrollBar::handle:hover {
-    background-color: #58A6FF;
+    background: #78a378;
 }
-
 QScrollBar::add-line, QScrollBar::sub-line {
     background: none;
+    border: none;
 }
 
-/* COMBOBOXES */
+/* === QComboBox === */
 QComboBox {
-    background-color: #161B22;
-    border: 1px solid #4C8EDA;
+    background-color: #3b453b;
+    border: 1px solid #5a6d5a;
     border-radius: 4px;
-    padding: 6px;
-    color: #E6F1FF;
-}
-
-QComboBox QAbstractItemView {
-    background-color: #0D1117;
-    selection-background-color: #264F78;
-    color: #E6F1FF;
-}
-
-/* TABS */
-QTabWidget::pane {
-    border: 1px solid #4C8EDA;
-    background-color: #121826;
-    border-radius: 6px;
     padding: 4px;
 }
-
-QTabBar::tab {
-    background-color: #21262D;
-    border: 1px solid #4C8EDA;
-    padding: 6px 12px;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-    margin-right: 2px;
-    color: #E6F1FF;
+QComboBox::drop-down {
+    border-left: 1px solid #495e49;
+    background: #4d5e4d;
+}
+QComboBox QAbstractItemView {
+    background-color: #4d5e4d;
+    border: 1px solid #5a6d5a;
+    selection-background-color: #5a6d5a;
+    selection-color: #000;
 }
 
-QTabBar::tab:selected {
-    background-color: #264F78;
-    border-color: #58A6FF;
+/* === QListWidget / QTreeView === */
+QListWidget, QTreeView {
+    background-color: #3b453b;
+    border: 1px solid #5a6d5a;
+}
+QListWidget::item:selected, QTreeView::item:selected {
+    background-color: #5a6d5a;
+    color: #000;
+    font-weight: bold;
 }
 
-/* MESSAGE BOX */
-QMessageBox {
-    background-color: #121826;
-    color: #E6F1FF;
-    border: 1px solid #4C8EDA;
+/* === QSpinBox === */
+QSpinBox {
+    background-color: #3b453b;
+    border: 1px solid #5a6d5a;
+    border-radius: 4px;
+    padding-right: 20px;
+    color: #c0c0c0;
+}
+QSpinBox::up-button, QSpinBox::down-button {
+    background-color: #3b453b;
+    border: 1px solid #5a6d5a;
+    width: 16px;
+    subcontrol-origin: border;
+}
+QSpinBox::up-button {
+    subcontrol-position: top right;
+    border-top-right-radius: 4px;
+}
+QSpinBox::down-button {
+    subcontrol-position: bottom right;
+    border-bottom-right-radius: 4px;
+}
+QSpinBox::up-button:hover, QSpinBox::down-button:hover {
+    background-color: #4d5e4d;
 }
 
-QMessageBox QLabel {
-    color: #E6F1FF;
-    font-size: 11pt;
+/* === QLabel === */
+QLabel {
+    color: #c0c0c0;
 }
 
-QMessageBox QPushButton {
-    background-color: #21262D;
-    color: #E6F1FF;
-    border: 1px solid #4C8EDA;
-    border-radius: 6px;
-    padding: 6px 12px;
-}
-
-QMessageBox QPushButton:hover {
-    background-color: #2C313C;
-    border-color: #58A6FF;
-}
-
-QMessageBox QPushButton:pressed {
-    background-color: #3B4452;
+/* === ToolTip === */
+QToolTip {
+    background-color: #5a6d5a;
+    color: #000;
+    border: 1px solid #78a378;
+    padding: 4px;
+    border-radius: 4px;
 }
 </string>
   </property>
@@ -248,7 +239,7 @@ QMessageBox QPushButton:pressed {
       <property name="font">
        <font>
         <family>Fira Code</family>
-        <pointsize>11</pointsize>
+        <pointsize>12</pointsize>
         <bold>true</bold>
        </font>
       </property>
@@ -265,7 +256,7 @@ QMessageBox QPushButton:pressed {
       <property name="font">
        <font>
         <family>Fira Code</family>
-        <pointsize>11</pointsize>
+        <pointsize>12</pointsize>
         <bold>true</bold>
        </font>
       </property>
@@ -454,7 +445,7 @@ QMessageBox QPushButton:pressed {
       <property name="font">
        <font>
         <family>Fira Code</family>
-        <pointsize>11</pointsize>
+        <pointsize>12</pointsize>
         <bold>true</bold>
        </font>
       </property>
@@ -474,7 +465,7 @@ QMessageBox QPushButton:pressed {
       <property name="font">
        <font>
         <family>Fira Code</family>
-        <pointsize>11</pointsize>
+        <pointsize>12</pointsize>
         <bold>true</bold>
        </font>
       </property>
@@ -495,8 +486,8 @@ p, li { white-space: pre-wrap; }
 hr { height: 1px; border-width: 0; }
 li.unchecked::marker { content: &quot;\2610&quot;; }
 li.checked::marker { content: &quot;\2612&quot;; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Fira Code','Consolas','Courier New','monospace'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Fira Code','Consolas','monospace'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Fira Code','Consolas','Courier New','monospace'; font-size:10pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
@@ -532,8 +523,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
      <x>0</x>
      <y>0</y>
      <width>1223</width>
-     <height>33</height>
+     <height>27</height>
     </rect>
+   </property>
+   <property name="defaultUp">
+    <bool>false</bool>
    </property>
    <widget class="QMenu" name="menu_Strata_C2">
     <property name="acceptDrops">
@@ -570,20 +564,18 @@ li.checked::marker { content: &quot;\2612&quot;; }
    </property>
   </action>
  </widget>
-
-    <customwidgets>
-        <customwidget>
-            <class>ListenerTableWidget</class>
-            <extends>QTableWidget</extends>
-            <header>../../../components/TableWidgets.h</header>
-        </customwidget>
-        <customwidget>
-            <class>AgentTableWidget</class>
-            <extends>QTableWidget</extends>
-            <header>../../../components/TableWidgets.h</header>
-        </customwidget>
-    </customwidgets>
-
+ <customwidgets>
+  <customwidget>
+   <class>ListenerTableWidget</class>
+   <extends>QTableWidget</extends>
+   <header>../../../components/TableWidgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>AgentTableWidget</class>
+   <extends>QTableWidget</extends>
+   <header>../../../components/TableWidgets.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
